--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["choosenim", "katima", "kyūjitai", "shinjitai"]
+  "cSpell.words": [
+    "choosenim",
+    "Fullwidth",
+    "Halfwidth",
+    "Joyo",
+    "katima",
+    "kyūjitai",
+    "Romaji",
+    "shinjitai"
+  ]
 }
